JDK8 compatibility changes
This commit tracks all the changes necessary to make the master branch
compatible to JDK8. It is regularly re-based to the current master. This
means that there is no separate history for the JDK8 version, but
released versions are kept via their tags.